--- a/Components/App.razor
+++ b/Components/App.razor
@@ -1,3 +1,6 @@
+@using Microsoft.AspNetCore.Components.Routing
+
+
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" />
