--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <meta charset="utf-8" />
@@ -8,18 +10,31 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="/">Home</a> |
-            <a href="/Trips">Viaggi (CRUD)</a> |
-            <a href="/map">Mappa</a> |
-            <a href="/blazor">Blazor</a>
-        </nav>
-        <nav>
-            <a href="/">Home</a> |
-            <a href="/Home/Privacy">Privacy</a> |
-            <a href="/blazor">Blazor</a>
-        </nav>
+    <header> 
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> 
+            <div class="container-fluid"> 
+                <a class="navbar-brand" href="/">TravelApp</a> 
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"> 
+                    <span class="navbar-toggler-icon"></span> 
+                </button> 
+                <div class="collapse navbar-collapse" id="navbarNav"> 
+                    <ul class="navbar-nav"> 
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Home</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a class="nav-link" href="/Trips">Viaggi (CRUD)</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a class="nav-link" href="/map">Mappa</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a class="nav-link" href="/blazor">Blazor</a>
+                        </li> 
+                    </ul> 
+                </div> 
+            </div> 
+        </nav> 
     </header>
 
     <main role="main" class="container">
