--- a/Views/Trips/Index.cshtml
+++ b/Views/Trips/Index.cshtml
@@ -4,7 +4,7 @@
 
 <a href="/Trips/Create">➕ Aggiungi Viaggio</a>
 
-<table>
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
             <th>Destinazione</th>
@@ -24,6 +24,11 @@
                     <a href="/Trips/Edit/@t.Id">Modifica</a> |
                     <a href="/Trips/Delete/@t.Id">Elimina</a> |
                     <a href="/Trips/DownloadPdf/@t.Id">PDF</a>
+                    <a class="btn btn-primary mb-3" href="/Trips/Create">+ Nuovo Viaggio</a>
+                    <a class="btn btn-outline-secondary btn-sm" href="/Trips/DownloadPdf/@t .Id">
+                        <i class="bi bi-file-earmark-pdf"></i> PDF
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+                    </a>
                 </td>
             </tr>
         }
