--- a/home.css
+++ b/home.css
@@ -55,7 +55,7 @@
     color: white;
     font-size: 16px;
     padding: 4px 0;
-    white-space: nowrap; /* evita che Diario vada a capo */
+    white-space: nowrap; 
 }
 
 
