--- a/style.css
+++ b/style.css
@@ -4,16 +4,15 @@
 .login-body {
     margin: 0;
     height: 100vh;
-    background: url("img/travel-bg.jpg") center/cover no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: scroll !important;
+    background: url("img/travel-bg.jpg") center/cover no-repeat fixed;
+    background-attachment: scroll;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
     overflow: hidden;
     font-family: 'Poppins', sans-serif;
 }
-
-
 
 /* Overlay scuro dietro (non blocca i click) */
 .login-body::before {
