--- a/destinazioni.css
+++ b/destinazioni.css
@@ -26,7 +26,7 @@
 =========================== */
 .dest-header {
     text-align: center;
-    margin-top: 120px;
+    margin-top: 60px;
     animation: fadeIn 1s ease forwards;
 }
 
@@ -45,7 +45,7 @@
    GRID DESTINAZIONI
 =========================== */
 .dest-grid {
-    margin: 60px auto;
+    margin: 30px auto 60px;
     width: 90%;
     max-width: 1200px;
     display: grid;
