--- a/navbar.css
+++ b/navbar.css
@@ -2,6 +2,7 @@
    NAVBAR UNIVERSALE
 =========================== */
 .navbar {
+    width: 100%;
     padding: 10px 18px;
     display: flex;
     justify-content: space-between;
