--- a/style.css
+++ b/style.css
@@ -70,10 +70,10 @@
     z-index: 10;
     display: flex;
     justify-content: center;
-    align-items: center;   /* CENTRA VERTICALMENTE */
+    align-items: center;   
     width: 100%;
-    height: 100vh;         /* OCCUPA TUTTA LA PAGINA */
-    padding-top: 0;        /* evita spazi indesiderati */
+    height: 100vh;        
+    padding-top: 0;       
 }
 
 
