--- a/destinazioni/london.css
+++ b/destinazioni/london.css
@@ -7,7 +7,7 @@
         rgba(0, 20, 60, 0.75),
         rgba(0, 20, 60, 0.75)
     ),
-    url("img/london-bg.jpg") center/cover no-repeat;
+    url("../img/london-bg.jpg") center/cover no-repeat;
     background-attachment: scroll !important;
     font-family: 'Poppins', sans-serif;
     color: white;
